[tool.poetry]
name = "l1-education"
version = "0.1.0"
description = ""
authors = ["eshanprashar <eshanprashar@uchicago.edu>"]
readme = "README.md"
packages = [{include = "l1_education"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.1"
jupyterlab = "^4.2.4"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
